# emp-c

./: BUILD  CMakeLists.txt  README.markdown  WORKSPACE  run.sh
examples/: add.c  and.c  build.sh  mult.c  run.sh
src/: build.sh  emp.cpp  empc.cpp  empc.h  spdz.cpp  symphony.h
src/emp/: emp.cpp  emp.h
src/net/: net.cpp  net.h
src/spdz/: spdz.cpp
